fix: change picture size on mobile screen

--- a/src/sass/components/_portfolio-section.scss
+++ b/src/sass/components/_portfolio-section.scss
@@ -37,6 +37,10 @@
       @include tablet {
         height: 150px;
       }
+
+      @include mobile {
+        height: 120px;
+      }
     }
 
     &__down {
